Fixed timeline spacing. Removed complex first item logic.

--- a/scss/common/_variables.scss
+++ b/scss/common/_variables.scss
@@ -1,7 +1,7 @@
 $font-family: "Roboto", sans-serif;
 $extra-large-font: 1.5rem; // 24px
 $large-font: 1rem; // 16px
-$small-font: 0.8em;
+$small-font: 0.8rem;
 $medium-font: 0.75rem; // 12px
 $med-sm-font: 0.625rem; //10px
 
