--- a/scss/pages/common/classifiers.scss
+++ b/scss/pages/common/classifiers.scss
@@ -30,7 +30,7 @@
 	background-color: #f7f7f7;
 }
 
-.stepper {
+ul.stepper {
 	position: relative;
 	padding: 2rem;
 	margin: 0;
@@ -39,22 +39,16 @@
 	@include mq('lg') {  padding: 3rem; }
 }
 
-.stepper__header {
-    // margin: 0 0 2rem 3.5rem;
-	color: #949494;
-
-	// @include mq('md') { margin: 0 0 2rem 5rem; }
-	// @include mq('lg') { margin: 0 0 4rem 18.5rem; }
-}
-
-.stepper__step {
+li.stepper__step {
 	display: flex;
 	padding: 0;
+
 	flex-direction: column;
 
   	@include mq('md') {
 		display: flex;
 		flex-direction: row; 
+		line-height: 1;
 		padding: 0;
 	}
 }
@@ -62,7 +56,6 @@
 .step__title {
 	margin: 0 0 1rem 0;
 }
-
 
 .step__form-text {
 	&::placeholder {
@@ -76,20 +69,25 @@
 }
 
 .step__number {
+	transition: all 0.1s ease-out;
 	margin: 0;
-	border-bottom: 1px solid #d6d6d6;
+	border-bottom: 1px solid $accent-color;
 	padding: 0.5rem 0 0.5rem 0;
 	margin: 0.5rem 0;
+	user-select: none;
 
   	@include mq('md') {
+    	// position: relative;
+  		// top: -10px;
 		border: 0;
+		margin: 0;
 		padding: 0;
 	}
 
   @include mq('lg') {
 	flex: 0 0 150px;
 	margin-right: 50px;
-	margin-top: -0.6rem;
+	// margin-top: -0.6rem;
 	font-family: 'Roboto', sans-serif;
 	font-size: 2rem;
 	text-align: right;
@@ -97,24 +95,21 @@
   } 
 }
 
-.step__description {
-	color: $text-gray;
-	line-height: 1.4;
-}
 
 /* vertical line */
 .step__circle {
 	display: none;
 
   	@include mq('md') {
-		display: flex;
-		flex: 0 0 50px;
 		position: relative;
+		display: flex;
+		justify-content: center;
+		flex: 0 0 50px;
+	    margin-top: 10px;
 		text-align: center;
 	}
 }
 	
-
 .step__circle:before {
 	content: '';
 	position: absolute;
@@ -131,13 +126,32 @@
 	position: relative;
 	display: inline-block;
 	z-index: 3;
-	width: 8px;
-	height: 8px;
+	width: 12px;
+	height: 12px;
 	background: #c5c5c5;
 	border-radius: 50%;
 	box-sizing: border-box;
-	transition: all 0.4s ease-in-out;
+	transition: all 0.1s ease-out;
 }
+
+.stepper li:hover {
+	.step__number {
+		color: $main-color;
+	}
+
+	.step__circle {
+	    i {
+	     transform: scale(2.25);
+	    }
+	  }
+	  
+	  .step__description {
+	    color: $accent-color;
+	  }
+
+}
+
+
 
 .step__body {
 	padding-bottom: 40px;
@@ -153,62 +167,14 @@
 	}
 }
 
-.stepper li:first-child .step__number,
-.stepper li:first-child .step__body {
-	margin-top: 0.5rem;
+
+
+.step__description {
+	color: $text-gray;
+	line-height: 1.4;
 }
 
-.stepper li:first-child .step__circle:before {
-	margin-top: 0.5rem;
-}
 
-.stepper li:first-child .step__circle:after {
-	content: "";
-	position: absolute;
-	box-sizing: border-box;
-	z-index: 1;
-	left: 0;
-	right: 0;
-	width: 40px;
-	height: 40px;
-	margin: auto;
-	border: 2px solid #e9e9e9;
-	background: transparent;
-	border-radius: 50%;
-}
-
-.stepper li:first-child i {
-	width: 40px;
-	height: 40px;
-	background: transparent;
-}
-
-.stepper li:first-child i:after {
-	content: '';
-	display: inline-block;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;	
-	width: 15px;
-	height: 15px;
-	margin: auto;
-	border-radius: 50%;
-	background: orange;
-}
-
-.stepper li:hover .step__number {
-	color: #555;
-}
-
-.stepper li:first-child:hover .step__circle i {
-	background: #222;
-}
-
-.stepper li:first-child:hover .step__circle:after {
-	border-color: #222;
-}
 
 // these dropzone classes are new, not overrides
 .dropzone__upload-icon {
